--- a/2-Advance/Crypto_Feature_Importance.ipynb
+++ b/2-Advance/Crypto_Feature_Importance.ipynb
@@ -5557,11 +5557,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.8.5 ('finrl': conda)",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.8.5"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "4a5901315a0f4e97c6f68c05146f6b2bc52d5562d6c8a28548099e61bf237d61"
+      }
     }
   },
   "nbformat": 4,
