--- a/2-Advance/execution_optimizing.ipynb
+++ b/2-Advance/execution_optimizing.ipynb
@@ -154,7 +154,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.5 ('finrl': conda)",
    "language": "python",
    "name": "python3"
   },
@@ -168,7 +168,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "4a5901315a0f4e97c6f68c05146f6b2bc52d5562d6c8a28548099e61bf237d61"
+   }
   }
  },
  "nbformat": 4,
